2010-10-28  James Robinson  <jamesr@chromium.org>

Reviewed by Simon Fraser.

        iframes forced into slow scrolling mode by containing RenderLayer sometimes
        https://bugs.webkit.org/show_bug.cgi?id=48570

        Adds a test that verifies that the repaint region for a scrolled iframe is not
        larger than necessary.

        * fast/repaint/iframe-scroll-repaint.html: Added.
        * fast/repaint/resources/iframe-scroll-repaint-iframe.html: Added.
        * platform/mac/fast/repaint/iframe-scroll-repaint-expected.checksum: Added.
        * platform/mac/fast/repaint/iframe-scroll-repaint-expected.png: Added.
        * platform/mac/fast/repaint/iframe-scroll-repaint-expected.txt: Added.
2010-10-28  James Robinson  <jamesr@chromium.org>

        Reviewed by Simon Fraser.

        iframes forced into slow scrolling mode by containing RenderLayer sometimes
        https://bugs.webkit.org/show_bug.cgi?id=48570

        Only performs the overlap test for RenderLayers that paint themselves.  This
        prevents marking RenderWidgets as being overlapped unnecessarily.

        Test: fast/repaint/iframe-scroll-repaint.html

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::paintLayer):

Canonical link: https://commits.webkit.org/61350@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70840 268f45cc-cd09-0410-ab3c-d52691b4dbfc